Issues about connection string

--- a/variables.env
+++ b/variables.env
@@ -1,2 +1,2 @@
-DB='mongodb+srv://haro:haro@novena-gen.0ttr9.mongodb.net/pets?retryWrites=true&w=majority'
+DB_URL=mongodb+srv://haro:haro@novena-gen.0ttr9.mongodb.net/pets?retryWrites=true&w=majority
 HOST=localhost
